--- a/views/pages/records.ejs
+++ b/views/pages/records.ejs
@@ -80,6 +80,8 @@
               <i class="fas fa-align-left"></i>
               <span></span>
             </button>
+            <!-- <button class="btn btn-danger">Logout</button> -->
+            <a href="/logout" class="btn btn-danger" type="button">Logout</a>
           </div>
         </nav>
 
