--- a/views/pages/patient_list.ejs
+++ b/views/pages/patient_list.ejs
@@ -1,12 +1,396 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>List</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <title>Patient Page</title>
+
+    <!-- Bootstrap CSS CDN -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+      crossorigin="anonymous"
+    />
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="/css/records.css" />
+    <link rel="stylesheet" href="/css/patient_list.css" />
+    <!-- Scrollbar Custom CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
+    />
+
+    <!-- Font Awesome JS -->
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+      integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
+      crossorigin="anonymous"
+    ></script>
   </head>
+
   <body>
-    <h1>List</h1>
+    <div class="wrapper">
+      <!-- Sidebar  -->
+      <nav id="sidebar">
+        <div class="sidebar-header">
+          <h3>Dawai Wale💊</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+          <li class="active">
+            <a href="#">&nbsp; Records</a>
+          </li>
+          <li>
+            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">&nbsp; Pages</a>
+            <ul class="collapse list-unstyled" id="pageSubmenu">
+              <li>
+                <a href="#">Page 1</a>
+              </li>
+              <li>
+                <a href="#">Page 2</a>
+              </li>
+              <li>
+                <a href="#">Page 3</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">&nbsp; Portfolio</a>
+          </li>
+          <li>
+            <a href="#">&nbsp; Contact</a>
+          </li>
+        </ul>
+      </nav>
+
+      <!-- Page Content  -->
+      <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <button type="button" id="sidebarCollapse" class="btn btn-info">
+              <i class="fas fa-align-left"></i>
+              <span></span>
+            </button>
+            <!-- <button class="btn btn-danger">Logout</button> -->
+            <a href="/logout" class="btn btn-danger" type="button">Logout</a>
+          </div>
+        </nav>
+
+        <h2>Patient List</h2>
+
+        <div class="mt-3 mb-4">
+          <div class="col-lg-12 mt-4 mt-lg-0">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
+                  <table class="table manage-candidates-top mb-0">
+                    <thead>
+                      <tr>
+                        <th>Patient Name</th>
+                        <th class="text-center">Status</th>
+                        <th class="action text-right">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="candidates-list">
+                        <td class="title">
+                          <div class="thumb">
+                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="" />
+                          </div>
+                          <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                              <div class="candidate-list-title">
+                                <h5 class="mb-0"><a href="#">Brooke Kelly</a></h5>
+                              </div>
+                              <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                  <li><i class="fas fa-filter pr-1"></i>Cancer</li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i>19 Years</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="candidate-list-favourite-time text-center">
+                          <span class="candidate-list-time order-1">Pending</span>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li>
+                              <a
+                                href="/patient_name/edit"
+                                class="text-info"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="Edit"
+                              >
+                                <i class="fas fa-pencil-alt"></i>
+                              </a>
+                            </li>
+                          </ul>
+                        </td>
+                      </tr>
+                      <tr class="candidates-list">
+                        <td class="title">
+                          <div class="thumb">
+                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" />
+                          </div>
+                          <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                              <div class="candidate-list-title">
+                                <h5 class="mb-0"><a href="#">Ronald Bradley</a></h5>
+                              </div>
+                              <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                  <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Monroe Township, NJ 08831</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="candidate-list-favourite-time text-center">
+                          <a class="candidate-list-favourite order-2 text-danger" href="#"
+                            ><i class="fas fa-heart"></i
+                          ></a>
+                          <span class="candidate-list-time order-1">Shortlisted</span>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li
+                              ><a
+                                href="#"
+                                class="text-primary"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="view"
+                                ><i class="far fa-eye"></i></a
+                            ></li>
+                            <li
+                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
+                                ><i class="fas fa-pencil-alt"></i></a
+                            ></li>
+                            <li
+                              ><a
+                                href="#"
+                                class="text-danger"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="Delete"
+                                ><i class="far fa-trash-alt"></i></a
+                            ></li>
+                          </ul>
+                        </td>
+                      </tr>
+                      <tr class="candidates-list">
+                        <td class="title">
+                          <div class="thumb">
+                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="" />
+                          </div>
+                          <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                              <div class="candidate-list-title">
+                                <h5 class="mb-0"><a href="#">Rafael Briggs</a></h5>
+                              </div>
+                              <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                  <li><i class="fas fa-filter pr-1"></i>Recruitment Consultancy</li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Haines City, FL 33844</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="candidate-list-favourite-time text-center">
+                          <a class="candidate-list-favourite order-2 text-danger" href="#"
+                            ><i class="fas fa-heart"></i
+                          ></a>
+                          <span class="candidate-list-time order-1">Shortlisted</span>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li
+                              ><a
+                                href="#"
+                                class="text-primary"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="view"
+                                ><i class="far fa-eye"></i></a
+                            ></li>
+                            <li
+                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
+                                ><i class="fas fa-pencil-alt"></i></a
+                            ></li>
+                            <li
+                              ><a
+                                href="#"
+                                class="text-danger"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="Delete"
+                                ><i class="far fa-trash-alt"></i></a
+                            ></li>
+                          </ul>
+                        </td>
+                      </tr>
+                      <tr class="candidates-list">
+                        <td class="title">
+                          <div class="thumb">
+                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="" />
+                          </div>
+                          <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                              <div class="candidate-list-title">
+                                <h5 class="mb-0"><a href="#">Vickie Meyer</a></h5>
+                              </div>
+                              <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                  <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Minneapolis, MN 55406</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="candidate-list-favourite-time text-center">
+                          <a class="candidate-list-favourite order-2 text-danger" href="#"
+                            ><i class="fas fa-heart"></i
+                          ></a>
+                          <span class="candidate-list-time order-1">Shortlisted</span>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li
+                              ><a
+                                href="#"
+                                class="text-primary"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="view"
+                                ><i class="far fa-eye"></i></a
+                            ></li>
+                            <li
+                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
+                                ><i class="fas fa-pencil-alt"></i></a
+                            ></li>
+                            <li
+                              ><a
+                                href="#"
+                                class="text-danger"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="Delete"
+                                ><i class="far fa-trash-alt"></i></a
+                            ></li>
+                          </ul>
+                        </td>
+                      </tr>
+                      <tr class="candidates-list">
+                        <td class="title">
+                          <div class="thumb">
+                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="" />
+                          </div>
+                          <div class="candidate-list-details">
+                            <div class="candidate-list-info">
+                              <div class="candidate-list-title">
+                                <h5 class="mb-0"><a href="#">Nichole Haynes</a></h5>
+                              </div>
+                              <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                  <li><i class="fas fa-filter pr-1"></i>Information Technology</li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Botchergate, Carlisle</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td class="candidate-list-favourite-time text-center">
+                          <a class="candidate-list-favourite order-2 text-danger" href="#"
+                            ><i class="fas fa-heart"></i
+                          ></a>
+                          <span class="candidate-list-time order-1">Shortlisted</span>
+                        </td>
+                        <td>
+                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
+                            <li
+                              ><a
+                                href="#"
+                                class="text-primary"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="view"
+                                ><i class="far fa-eye"></i></a
+                            ></li>
+                            <li
+                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
+                                ><i class="fas fa-pencil-alt"></i></a
+                            ></li>
+                            <li
+                              ><a
+                                href="#"
+                                class="text-danger"
+                                data-toggle="tooltip"
+                                title=""
+                                data-original-title="Delete"
+                                ><i class="far fa-trash-alt"></i></a
+                            ></li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Popper.JS -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+      crossorigin="anonymous"
+    ></script>
+    <!-- jQuery Custom Scroller CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#sidebar").mCustomScrollbar({
+          theme: "minimal",
+        });
+
+        $("#sidebarCollapse").on("click", function () {
+          $("#sidebar, #content").toggleClass("active");
+          $(".collapse.in").toggleClass("in");
+          $("a[aria-expanded=true]").attr("aria-expanded", "false");
+        });
+      });
+    </script>
   </body>
 </html>
