--- a/views/pages/patient_list.ejs
+++ b/views/pages/patient_list.ejs
@@ -18,18 +18,10 @@
     <link rel="stylesheet" href="/css/records.css" />
     <link rel="stylesheet" href="/css/patient_list.css" />
     <!-- Scrollbar Custom CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
 
     <!-- Font Awesome JS -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
@@ -102,6 +94,9 @@
                       </tr>
                     </thead>
                     <tbody>
+                      <!-- start -->
+                      <% patient_list.map(patient => { %>
+
                       <tr class="candidates-list">
                         <td class="title">
                           <div class="thumb">
@@ -110,12 +105,12 @@
                           <div class="candidate-list-details">
                             <div class="candidate-list-info">
                               <div class="candidate-list-title">
-                                <h5 class="mb-0"><a href="#">Brooke Kelly</a></h5>
+                                <h5 class="mb-0"><a href="#"><%=patient.name%></a></h5>
                               </div>
                               <div class="candidate-list-option">
                                 <ul class="list-unstyled">
-                                  <li><i class="fas fa-filter pr-1"></i>Cancer</li>
-                                  <li><i class="fas fa-map-marker-alt pr-1"></i>19 Years</li>
+                                  <li><i class="fas fa-filter pr-1"></i><%=patient.Current_disease%></li>
+                                  <li><i class="fas fa-map-marker-alt pr-1"></i><%=patient.Age%></li>
                                 </ul>
                               </div>
                             </div>
@@ -127,227 +122,13 @@
                         <td>
                           <ul class="list-unstyled mb-0 d-flex justify-content-end">
                             <li>
-                              <a
-                                href="/patient_name/edit"
-                                class="text-info"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="Edit"
-                              >
-                                <i class="fas fa-pencil-alt"></i>
-                              </a>
+                              <a href="/<%=patient.id%>/details" class="btn btn-danger" type="button">Details</a>
                             </li>
                           </ul>
                         </td>
                       </tr>
-                      <tr class="candidates-list">
-                        <td class="title">
-                          <div class="thumb">
-                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="" />
-                          </div>
-                          <div class="candidate-list-details">
-                            <div class="candidate-list-info">
-                              <div class="candidate-list-title">
-                                <h5 class="mb-0"><a href="#">Ronald Bradley</a></h5>
-                              </div>
-                              <div class="candidate-list-option">
-                                <ul class="list-unstyled">
-                                  <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
-                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Monroe Township, NJ 08831</li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </td>
-                        <td class="candidate-list-favourite-time text-center">
-                          <a class="candidate-list-favourite order-2 text-danger" href="#"
-                            ><i class="fas fa-heart"></i
-                          ></a>
-                          <span class="candidate-list-time order-1">Shortlisted</span>
-                        </td>
-                        <td>
-                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                            <li
-                              ><a
-                                href="#"
-                                class="text-primary"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="view"
-                                ><i class="far fa-eye"></i></a
-                            ></li>
-                            <li
-                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
-                                ><i class="fas fa-pencil-alt"></i></a
-                            ></li>
-                            <li
-                              ><a
-                                href="#"
-                                class="text-danger"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="Delete"
-                                ><i class="far fa-trash-alt"></i></a
-                            ></li>
-                          </ul>
-                        </td>
-                      </tr>
-                      <tr class="candidates-list">
-                        <td class="title">
-                          <div class="thumb">
-                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="" />
-                          </div>
-                          <div class="candidate-list-details">
-                            <div class="candidate-list-info">
-                              <div class="candidate-list-title">
-                                <h5 class="mb-0"><a href="#">Rafael Briggs</a></h5>
-                              </div>
-                              <div class="candidate-list-option">
-                                <ul class="list-unstyled">
-                                  <li><i class="fas fa-filter pr-1"></i>Recruitment Consultancy</li>
-                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Haines City, FL 33844</li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </td>
-                        <td class="candidate-list-favourite-time text-center">
-                          <a class="candidate-list-favourite order-2 text-danger" href="#"
-                            ><i class="fas fa-heart"></i
-                          ></a>
-                          <span class="candidate-list-time order-1">Shortlisted</span>
-                        </td>
-                        <td>
-                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                            <li
-                              ><a
-                                href="#"
-                                class="text-primary"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="view"
-                                ><i class="far fa-eye"></i></a
-                            ></li>
-                            <li
-                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
-                                ><i class="fas fa-pencil-alt"></i></a
-                            ></li>
-                            <li
-                              ><a
-                                href="#"
-                                class="text-danger"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="Delete"
-                                ><i class="far fa-trash-alt"></i></a
-                            ></li>
-                          </ul>
-                        </td>
-                      </tr>
-                      <tr class="candidates-list">
-                        <td class="title">
-                          <div class="thumb">
-                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="" />
-                          </div>
-                          <div class="candidate-list-details">
-                            <div class="candidate-list-info">
-                              <div class="candidate-list-title">
-                                <h5 class="mb-0"><a href="#">Vickie Meyer</a></h5>
-                              </div>
-                              <div class="candidate-list-option">
-                                <ul class="list-unstyled">
-                                  <li><i class="fas fa-filter pr-1"></i>Human Resources</li>
-                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Minneapolis, MN 55406</li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </td>
-                        <td class="candidate-list-favourite-time text-center">
-                          <a class="candidate-list-favourite order-2 text-danger" href="#"
-                            ><i class="fas fa-heart"></i
-                          ></a>
-                          <span class="candidate-list-time order-1">Shortlisted</span>
-                        </td>
-                        <td>
-                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                            <li
-                              ><a
-                                href="#"
-                                class="text-primary"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="view"
-                                ><i class="far fa-eye"></i></a
-                            ></li>
-                            <li
-                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
-                                ><i class="fas fa-pencil-alt"></i></a
-                            ></li>
-                            <li
-                              ><a
-                                href="#"
-                                class="text-danger"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="Delete"
-                                ><i class="far fa-trash-alt"></i></a
-                            ></li>
-                          </ul>
-                        </td>
-                      </tr>
-                      <tr class="candidates-list">
-                        <td class="title">
-                          <div class="thumb">
-                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="" />
-                          </div>
-                          <div class="candidate-list-details">
-                            <div class="candidate-list-info">
-                              <div class="candidate-list-title">
-                                <h5 class="mb-0"><a href="#">Nichole Haynes</a></h5>
-                              </div>
-                              <div class="candidate-list-option">
-                                <ul class="list-unstyled">
-                                  <li><i class="fas fa-filter pr-1"></i>Information Technology</li>
-                                  <li><i class="fas fa-map-marker-alt pr-1"></i>Botchergate, Carlisle</li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </td>
-                        <td class="candidate-list-favourite-time text-center">
-                          <a class="candidate-list-favourite order-2 text-danger" href="#"
-                            ><i class="fas fa-heart"></i
-                          ></a>
-                          <span class="candidate-list-time order-1">Shortlisted</span>
-                        </td>
-                        <td>
-                          <ul class="list-unstyled mb-0 d-flex justify-content-end">
-                            <li
-                              ><a
-                                href="#"
-                                class="text-primary"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="view"
-                                ><i class="far fa-eye"></i></a
-                            ></li>
-                            <li
-                              ><a href="#" class="text-info" data-toggle="tooltip" title="" data-original-title="Edit"
-                                ><i class="fas fa-pencil-alt"></i></a
-                            ></li>
-                            <li
-                              ><a
-                                href="#"
-                                class="text-danger"
-                                data-toggle="tooltip"
-                                title=""
-                                data-original-title="Delete"
-                                ><i class="far fa-trash-alt"></i></a
-                            ></li>
-                          </ul>
-                        </td>
-                      </tr>
+                      <% }) %>
+                      <!-- end -->
                     </tbody>
                   </table>
                 </div>
@@ -359,11 +140,7 @@
     </div>
 
     <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
