--- a/views/pages/patient_list.ejs
+++ b/views/pages/patient_list.ejs
@@ -100,7 +100,7 @@
                       <tr class="candidates-list">
                         <td class="title">
                           <div class="thumb">
-                            <img class="img-fluid" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="" />
+                            <img class="img-fluid" src="<%=patient.picture%>" alt="" />
                           </div>
                           <div class="candidate-list-details">
                             <div class="candidate-list-info">
@@ -122,7 +122,7 @@
                         <td>
                           <ul class="list-unstyled mb-0 d-flex justify-content-end">
                             <li>
-                              <a href="/<%=patient.id%>/details" class="btn btn-danger" type="button">Details</a>
+                              <a href="/<%=patient.id%>/details" class="btn btn-warning" type="button">Details</a>
                             </li>
                           </ul>
                         </td>
