home page button

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Home Page</h1>
+    <div class="container mt-5">
+      <h1>Home Page</h1>
+      <a href="" type="button" class="btn btn-danger">Doctor</a>
+      <a href="" type="button" class="btn btn-warning">Patient</a>
+    </div>
   </body>
 </html>
