auth access given to both category

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,8 +15,8 @@
   <body>
     <div class="container mt-5">
       <h1>Home Page</h1>
-      <a href="" type="button" class="btn btn-danger">Doctor</a>
-      <a href="" type="button" class="btn btn-warning">Patient</a>
+      <a href="/login/staff" type="button" class="btn btn-danger">Doctor</a>
+      <a href="/login/patient" type="button" class="btn btn-warning">Patient</a>
     </div>
   </body>
 </html>
