--- a/public/css/patient_list.css
+++ b/public/css/patient_list.css
@@ -176,3 +176,7 @@ body {
 .user-dashboard-info-box .candidates-list .thumb {
   margin-right: 20px;
 }
+
+#sidebar_image {
+  margin-left: 20px;
+}
