--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -16,52 +16,28 @@
     <link rel="stylesheet" href="/css/login.css" />
   </head>
   <body>
-    <!-- <div class="login-wrap">
+    <div class="login-wrap">
       <div class="login-html">
-        <h2>APP NAME</h2>
-        <div class="container">
-          <input id="patient" type="radio" name="tab" class="sign-in" checked onclick="check_tab(this.id)" /><label
-            for="patient"
-            class="tab"
-          >
-            Patient
-          </label>
-          <input id="staff" type="radio" name="tab" class="sign-up" onclick="check_tab(this.id)" /><label
-            for="staff"
-            class="tab"
-            >Sign Up</label
-          >
-          <div class="login-form">
-            <div class="sign-in-htm">
-              <h3>Login for Patient</h3>
-              <div class="signin_button">
-                <div id="firebaseui-auth-container"> </div>
-              </div>
-            </div>
-            <div class="sign-up-htm">
-              <h3>Login for Staff</h3>
-              <div class="signin_button">
-                <div id="firebaseui-auth-container"> </div>
-              </div>
+        <div class="logo_div">
+          <img src="/images/logo.png" alt="" height="200px" />
+        </div>
+        <div class="container"
+          ><%if(category == 'patient'){%>
+          <div id="patient">
+            <div class="signin_button">
+              <div id="firebaseui-auth-container"> </div>
             </div>
           </div>
+          <%}else{%>
+          <div id="staff">
+            <div class="signin_button">
+              <div id="firebaseui-auth-container"> </div>
+            </div>
+          </div>
+          <%}%>
         </div>
       </div>
-    </div> -->
-
-    <%if(category == 'patient'){%>
-    <div id="patient">
-      <div class="signin_button">
-        <div id="firebaseui-auth-container"> </div>
-      </div>
     </div>
-    <%}else{%>
-    <div id="staff">
-      <div class="signin_button">
-        <div id="firebaseui-auth-container"> </div>
-      </div>
-    </div>
-    <%}%>
 
     <!-- SCRIPTS -->
     <script>
