treatment page changes

--- a/views/pages/records.ejs
+++ b/views/pages/records.ejs
@@ -42,7 +42,7 @@
       <!-- Sidebar  -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <h3>Dawai Wale💊</h3>
+          <h3>Elixicor</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -50,6 +50,9 @@
             <a href="#">&nbsp; Records</a>
           </li>
           <li>
+            <a href="/treatment">&nbsp; Treatment</a>
+          </li>
+          <!-- <li>
             <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">&nbsp; Pages</a>
             <ul class="collapse list-unstyled" id="pageSubmenu">
               <li>
@@ -68,7 +71,7 @@
           </li>
           <li>
             <a href="#">&nbsp; Contact</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
 
