--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -42,7 +42,7 @@
       <!-- Sidebar  -->
       <nav id="sidebar">
         <div class="sidebar-header">
-          <h3>Dawai Wale💊</h3>
+          <h3>Elixicor</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -65,9 +65,6 @@
           </li> -->
           <li class="active">
             <a href="#">&nbsp; Treatment</a>
-          </li>
-          <li>
-            <a href="#">&nbsp; Contact</a>
           </li>
         </ul>
       </nav>
