--- a/public/css/records.css
+++ b/public/css/records.css
@@ -142,6 +142,7 @@ a.article,
 a.article:hover {
   background: #6d7fcc !important;
   color: #fff !important;
+  cursor: pointer;
 }
 
 /* ---------------------------------------------------
