--- a/views/pages/patient_list.ejs
+++ b/views/pages/patient_list.ejs
@@ -47,8 +47,11 @@
         </div>
         <img src="/images/patient_sidebar.svg" alt="" width="200px" height="200px" id="sidebar_image" />
         <ul class="list-unstyled CTAs">
-          <li>
-            <a href="#">Add New Patient</a>
+          <li class="d-flex justify-content-center">
+            <a href="#" class="article">Add New Patient</a>
+            <!-- <button type="button" class="btn article" data-toggle="modal" data-target="#exampleModal">
+              Add New Patient
+            </button> -->
           </li>
         </ul>
       </nav>
@@ -123,6 +126,77 @@
                   </table>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Add a Patient</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group row">
+                  <label for="patient_name" class="col-sm-2 col-form-label">Name</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="patient_name" />
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="age" class="col-sm-2 col-form-label">Age</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="age" />
+                  </div>
+                </div>
+                <fieldset class="form-group row">
+                  <legend class="col-form-label col-sm-2 float-sm-left pt-0">Sex</legend>
+                  <div class="col-sm-10">
+                    <div class="form-check">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="gridRadios"
+                        id="gridRadios1"
+                        value="option1"
+                        checked
+                      />
+                      <label class="form-check-label" for="gridRadios1"> Male </label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" />
+                      <label class="form-check-label" for="gridRadios2"> Female </label>
+                    </div>
+                  </div>
+                </fieldset>
+                <div class="form-group row">
+                  <label for="occupation" class="col-sm-4 col-form-label">Occupation</label>
+                  <div class="col-sm-8">
+                    <input type="text" class="form-control" id="occupation" />
+                  </div>
+                </div>
+                <!-- <div class="form-group row">
+                  <div class="col-sm-10 offset-sm-2">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="gridCheck1" />
+                      <label class="form-check-label" for="gridCheck1"> Example checkbox </label>
+                    </div>
+                  </div>
+                </div> -->
+                <div class="form-group row">
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
