--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -77,6 +77,7 @@
               <i class="fas fa-align-left"></i>
               <span></span>
             </button>
+            <h3><%=patient.name%></h3>
             <!-- <button class="btn btn-danger">Logout</button> -->
             <a href="/logout" class="btn btn-danger" type="button">Logout</a>
           </div>
