--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,7 +5,7 @@
 
   <ul class="list-unstyled components">
     <li class="<%= para1 %>">
-      <a href="#">&nbsp; Records</a>
+      <a href="/">&nbsp; Records</a>
     </li>
     <li class="<%= para2 %>">
       <a href="/treatment">&nbsp; Treatment</a>
