--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -39,7 +39,23 @@
   <body>
     <div class="wrapper">
       <!-- Sidebar  -->
-      <%- include('../partials/sidebar.ejs',{para1:'', para2:'',para3:'active'})%>
+      <nav id="sidebar">
+        <div class="sidebar-header">
+          <h3>Elixicor</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+          <li>
+            <a href="/patient/<%=uniqueID%>/details">&nbsp; EMR</a>
+          </li>
+          <li>
+            <a href="/patient/<%=uniqueID%>/<%=disease%>/treatment">&nbsp; Treatment</a>
+          </li>
+          <li class="active">
+            <a href="/patient/<%=uniqueID%>/profile">&nbsp; Profile</a>
+          </li>
+        </ul>
+      </nav>
       <!-- Page Content  -->
       <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
