--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -40,7 +40,23 @@
   <body>
     <div class="wrapper">
       <!-- Sidebar  -->
-      <%- include('../partials/sidebar.ejs',{para1:'', para2:'active',para3:''})%>
+      <nav id="sidebar">
+        <div class="sidebar-header">
+          <h3>Elixicor</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+          <li>
+            <a href="/patient/<%=uniqueID%>/details">&nbsp; EMR</a>
+          </li>
+          <li class="active">
+            <a href="/patient/<%=uniqueID%>/<%=disease%>/treatment">&nbsp; Treatment</a>
+          </li>
+          <li>
+            <a href="/patient/<%=uniqueID%>/profile">&nbsp; Profile</a>
+          </li>
+        </ul>
+      </nav>
 
       <!-- Page Content  -->
       <div id="content">
