--- a/views/pages/new_patient.ejs
+++ b/views/pages/new_patient.ejs
@@ -17,24 +17,17 @@
     <link rel="stylesheet" href="/css/records.css" />
     <link rel="stylesheet" href="/css/patient_list.css" />
     <!-- Scrollbar Custom CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
 
     <!-- Font Awesome JS -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
       integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -69,35 +62,28 @@
 
         <h2>New Patient</h2>
         <div class="d-flex justify-content-center mt-5">
-          <form class="col-8 bg-secondary text-light rounded p-5">
+          <form id="new_patient" class="col-8 bg-secondary text-light rounded p-5">
             <div class="form-group row">
               <label for="patient_name" class="col-sm-2 col-form-label">Name</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="patient_name" />
+                <input type="text" name="name" class="form-control" id="patient_name" />
               </div>
             </div>
             <div class="form-group row">
               <label for="age" class="col-sm-2 col-form-label">Age</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="age" />
+                <input type="text" name="Age" class="form-control" id="age" />
               </div>
             </div>
             <fieldset class="form-group row">
               <legend class="col-form-label col-sm-2 float-sm-left pt-0">Sex</legend>
               <div class="col-sm-10">
                 <div class="form-check">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="gridRadios"
-                    id="gridRadios1"
-                    value="option1"
-                    checked
-                  />
+                  <input class="form-check-input" type="radio" name="Sex" id="gridRadios1" value="male" checked />
                   <label class="form-check-label" for="gridRadios1"> Male </label>
                 </div>
                 <div class="form-check">
-                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" />
+                  <input class="form-check-input" type="radio" name="Sex" id="gridRadios2" value="female" />
                   <label class="form-check-label" for="gridRadios2"> Female </label>
                 </div>
               </div>
@@ -105,19 +91,19 @@
             <div class="form-group row">
               <label for="height" class="col-sm-4 col-form-label">Height</label>
               <div class="col-sm-4">
-                <input type="text" class="form-control" id="height" />
+                <input type="text" name="height" class="form-control" id="height" />
               </div>
             </div>
             <div class="form-group row">
               <label for="weight" class="col-sm-4 col-form-label">Weight</label>
               <div class="col-sm-4">
-                <input type="text" class="form-control" id="weight" />
+                <input type="text" name="weight" class="form-control" id="weight" />
               </div>
             </div>
             <div class="form-group row">
               <label for="cuurent_disease" class="col-sm-4 col-form-label">Current Disease</label>
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="cuurent_disease" />
+                <input type="text" name="Current_disease" class="form-control" id="current_disease" />
               </div>
             </div>
             <div class="form-group row">
@@ -129,5 +115,21 @@
         </div>
       </div>
     </div>
+
+    <script>
+      const form = document.getElementById("new_patient");
+      const obj = {};
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        let formData = new FormData(e.target);
+
+        const data = Object.fromEntries(formData);
+        console.log(data);
+
+        axios.post("/patient/new", data).then(function (response) {
+          console.log(response);
+        });
+      });
+    </script>
   </body>
 </html>
