--- a/views/pages/treatment.ejs
+++ b/views/pages/treatment.ejs
@@ -47,6 +47,9 @@
           <li>
             <a href="/patient/<%=uniqueID%>/profile">&nbsp; Profile</a>
           </li>
+          <li>
+            <a href="/patient/<%=uniqueID%>/<%=disease_name%>/todo">&nbsp; Todo</a>
+          </li>
         </ul>
       </nav>
 
