--- a/views/pages/todo.ejs
+++ b/views/pages/todo.ejs
@@ -16,19 +16,12 @@
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="/css/records.css" />
     <link rel="stylesheet" href="/css/patient_list.css" />
+    <link rel="stylesheet" href="/css/todo.css" />
     <!-- Scrollbar Custom CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" />
 
     <!-- Font Awesome JS -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
-      integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
@@ -51,8 +44,11 @@
           <li>
             <a href="/patient/<%=uniqueID%>/<%=disease%>/treatment">&nbsp; Treatment</a>
           </li>
-          <li class="active">
+          <li>
             <a href="/patient/<%=uniqueID%>/profile">&nbsp; Profile</a>
+          </li>
+          <li class="active">
+            <a href="/patient/<%=uniqueID%>/profile">&nbsp; Check List</a>
           </li>
         </ul>
       </nav>
@@ -70,35 +66,60 @@
         </nav>
 
         <div class="container">
-          <h2>Profile</h2>
-          <div class="border border-5 border-info rounded p-5">
-            <table class="table table-hover">
-              <tbody>
-                <tr>
-                  <th scope="row">Name</th>
-                  <td>Pratyush Jain</td>
-                </tr>
-                <tr>
-                  <th scope="row">Age</th>
-                  <td>19 Years</td>
-                </tr>
-                <tr>
-                  <th scope="row">Sex</th>
-                  <td>Male</td>
-                </tr>
-                <tr>
-                  <th scope="row">Height (in m)</th>
-                  <td>1.74</td>
-                </tr>
-                <tr>
-                  <th scope="row">Weight (in kgs)</th>
-                  <td>80</td>
-                </tr>
-              </tbody>
-            </table>
+          <h2>Realtime Status</h2>
+          <div class="container mt-5">
+            <div class="d-flex justify-content-center row">
+              <div class="col-md-6">
+                <div class="p-4 bg-white notes">
+                  <div class="d-flex flex-row align-items-center notes-title">
+                    <h4>Checklist</h4>
+                  </div>
+                  <!-- <div class="d-flex flex-row align-items-center align-content-center"
+                    ><span class="rounded info">04/01/2020</span><span class="dot"></span
+                    ><span class="info ml-1">ML - 1321</span></div
+                  > -->
+                </div>
+                <div class="p-3 bg-white">
+                  <div class="d-flex align-items-center"
+                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Task list and assignments</span></label></div
+                  >
+                  <div class="d-flex align-items-center"
+                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Set due date and assignments</span></label></div
+                  >
+                  <div class="d-flex align-items-center"
+                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Remove duplicate tasks and stories</span></label></div
+                  >
+                  <div class="d-flex align-items-center"
+                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Update the userflow and stories</span></label></div
+                  >
+                  <div class="d-flex align-items-center"
+                    ><label><input type="checkbox" class="option-input radio" /><span class="label-text">Adjust the components</span></label></div
+                  >
+                </div>
+                <!-- <div class="p-2 bg-white">
+                  <h6 class="line-text"><span>Shared with</span></h6>
+                </div>
+                <div class="d-flex justify-content-center p-2 bg-white user-images"
+                  ><img class="rounded-circle" src="https://i.imgur.com/rQMmlf6.jpg" width="40" /><img
+                    class="rounded-circle"
+                    src="https://i.imgur.com/zE0TPlF.jpg"
+                    width="40" /><img class="rounded-circle" src="https://i.imgur.com/rCAhOXi.jpg" width="40" /><img
+                    class="rounded-circle"
+                    src="https://i.imgur.com/28GMrS0.jpg"
+                    width="40"
+                /></div> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="/todo.js"></script>
   </body>
 </html>
