--- a/views/pages/todo.ejs
+++ b/views/pages/todo.ejs
@@ -141,7 +141,9 @@
           </div>
           <div class="container mt-5 pt-5">
             <h3>Updated Bill</h3>
+
             <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+              <div class="alert alert-warning" role="alert"> This is a prototype for now! </div>
               <!-- Shopping cart table -->
               <div class="table-responsive">
                 <table class="table">
@@ -187,6 +189,9 @@
                     </tr>
                   </tbody>
                 </table>
+                <div class="add">
+                  <i class="fas fa-plus-square fa-lg"></i>
+                </div>
               </div>
               <!-- End -->
             </div>
