treatment page done

--- a/views/pages/todo.ejs
+++ b/views/pages/todo.ejs
@@ -81,16 +81,16 @@
                 </div>
                 <div class="p-3 bg-white">
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Task list and assignments</span></label></div
+                    ><label><input type="checkbox" name="option" id="1" class="option-input radio" /><span class="label-text">Task list and assignments</span></label></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Set due date and assignments</span></label></div
+                    ><label><input type="checkbox" name="option" id="2" class="option-input radio" /><span class="label-text">Set due date and assignments</span></label></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Remove duplicate tasks and stories</span></label></div
+                    ><label><input type="checkbox" name="option" id="3" class="option-input radio" /><span class="label-text">Remove duplicate tasks and stories</span></label></div
                   >
                   <div class="d-flex align-items-center"
-                    ><label><input type="checkbox" name="option" class="option-input radio" /><span class="label-text">Update the userflow and stories</span></label></div
+                    ><label><input type="checkbox" name="option" id="4" class="option-input radio" /><span class="label-text">Update the userflow and stories</span></label></div
                   >
                   <div class="d-flex align-items-center"
                     ><label><input type="checkbox" class="option-input radio" /><span class="label-text">Adjust the components</span></label></div
