--- a/views/pages/prediction.ejs
+++ b/views/pages/prediction.ejs
@@ -68,7 +68,7 @@
 
         <div class="container">
           <h2>Prescription</h2>
-
+          <div class="alert alert-warning mt-3" role="alert"> This is a prototype for now! </div>
           <div class="input-group my-5 col-6">
             <div class="input-group-prepend">
               <label class="input-group-text" for="inputGroupSelect01">Options</label>
